# cxxkit

./: CMakeLists.txt  README.md  errcode.h
2pc/: cohort.cpp  cohort.h  coordinator.cpp  coordinator.h  def.h
example/: README.md  use_2pc.cpp  use_fsm.cpp
fsm/: fsm_prototype.cpp  fsm_prototype.h
